Projeto Editora corrigindo css

--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
 <div class="main">
      
     <!--banner-home-top-->
-    <section class="banner-home-top">
+    <div class="banner-home-top">
         <div class="owl-carousel owl-theme"> 
-            <div><a href="#"></a><img src="images/banner-com-texo.png" alt="banner"></a></div>
-            <div><a href="#"></a><img src="images/banner-home.png" alt="banner"></a></div>
-            <div><a href="#"></a><img src="images/banner-com-texo.png" alt="banner"></a></div> 
-            <div><a href="#"></a><img src="images/banner-home.png" alt="banner"></a></div>
-            <div><a href="#"></a><img src="images/banner-com-texo.png" alt="banner"></a></div>
-            <div><a href="#"></a><img src="images/banner-home.png" alt="banner"></a></div> 
+            <div><a href="#"><img src="images/banner-com-texo.png" alt="banner"></a></div>
+            <div><a href="#"><img src="images/banner-home.png" alt="banner"></a></div>
+            <div><a href="#"><img src="images/banner-com-texo.png" alt="banner"></a></div> 
+            <div><a href="#"><img src="images/banner-home.png" alt="banner"></a></div>
+            <div><a href="#"><img src="images/banner-com-texo.png" alt="banner"></a></div>
+            <div><a href="#"><img src="images/banner-home.png" alt="banner"></a></div> 
         </div> 
-    </section>
+    </div>
     <!--banner-home-top-->
 
 
@@ -324,7 +324,7 @@
                            <h3>A Bruxa da Floresta</h3>
                            <h4>Emily Robbins</h4>
                            <div class="estrelas">
-                               <input type="radio" id="cm_star-empty" name="fb" value="" checked/>
+                               <input type="radio" class="cm_star-empty" name="fb" value="" checked/>
                                <label for="cm_star-1"><i class="fa"></i></label>
                                <input type="radio" id="cm_star-1" name="fb" value="1"/>
                                <label for="cm_star-2"><i class="fa"></i></label>
