--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="conteudo-converse">
                 <p>
-                    Converse com a MEPE <a href="#"><i class="fa fa-whatsapp"></i></a> <a href="#"><i
+                    Converse com a MEPE <a href="#"><img src="images/whats-top.png" alt="whats"></a> <a href="#"><i
                             class="fa fa-paper-plane"></i></a>
                 </p>
             </div>
