--- a/blog.html
+++ b/blog.html
@@ -94,13 +94,13 @@
  <div class="main">
     <!--banner-blog-->
     <section class="banner-blog">
-        <header class="container">
+        <header class="container-blog">
              <h1>Blog</h1>
         </header>
     </section>
     <!--banner-blog-->
     <!--Breadcrumb-->
-    <div class="breadcrumb container">
+    <div class="breadcrumb container-blog">
         <ul class="breadcrumb-item">
             <li><a href="#">Home</a></li>
             <li><a href="#">Blog</a></li>
@@ -109,7 +109,7 @@
     <!--Breadcrumb-->
 
      <!--box-blog-->
-     <div class="box-blog container">
+     <div class="box-blog container-blog">
         <!--box-noticia-->
         <div class="box-noticia"> 
             <!--noticias-->
