finalizando o Projeto Editora

--- a/a-mepe.html
+++ b/a-mepe.html
@@ -230,7 +230,9 @@
                            <h3>Publique seu livro</h3>
                            <a href="#" class="btn btn-primary botao-a-mepe-meu-primeiro-livro">veja como <strong>publicar</strong> seu livro</a>
                        </div>
-                        <img src="images/livro-publique.png" alt="livro">
+                        <!--<img src="images/livro-publique.png" alt="livro">-->
+                        <img src="images/livro-inclinado.png" alt="livro" class="livro-inclinado-a-mepe">
+                        <img src="images/livro.png" alt="livro" class="livro-padrao-a-mepe">
                 </div>
           <!--box-seu-livro-->
           <!--a-mepe-card-meu-primeiro-livro-->
@@ -239,7 +241,8 @@
                             <h3>Meu primeiro livro</h3>
                             <a href="#" class="btn btn-primary botao-a-mepe-meu-primeiro-livro">veja como <strong>publicar</strong> seu livro</a> 
                        </div>
-                       <img src="images/the-missing.png" alt="livro">
+                       <!--<img src="images/the-missing.png" alt="livro">-->
+                       <img src="images/livro.png" alt="livro" class="livro-padrao-a-mepe-normal">
                 </div> 
         <!--a-mepe-card-meu-primeiro-livro-->
             </div>
